Version 0.9.0beta1 - 2007-05-XX
 * New Features:
   * New TaggerScript function $len(text). (#2843)
 * Bug Fixes:
   * F1 for Help instead of CTRL+H on Windows and Linux. (#2485, Nikolai Prokoschenko)
   * Tabbing focus transition from search isn't as expected. (#2546, Nikolai Prokoschenko)
   * Display an error message if launching a web browser failed.
   * Fixed web-service error caused PUID submissions.

Version 0.9.0alpha9 - 2007-05-12
 * New Features:
   * The tag editor now accepts free-text tag names.
   * Load 'DJ-mixed by' AR data to %djmixer% tag.
   * Load 'Mixed by' AR data to %mixer% tag.
   * Delay the webservice client to do max. 1 request per second.
   * Sort files in clusters by disc number, track number and file name. (#2547)
   * Support for any text frame in special variable %_id3:%.
   * Ignore empty ID3 text values.
   * Windows installer:
     * Removed DirectX-based decoder.
     * FFmpeg compiled with AAC (faad2) support.
 * Bug Fixes:
   * Save XSOP frame to ID3v2.3 tags. (#2484)
   * Use attributes like 'guest' or 'additional' also from generic performer ARs.
   * Fixed capitalization of %releasetype% in file naming preview. (#2762)
   * Fixed 'python setup.py build_ext' if py2app and setuptools are loaded.
   * ID3v2.3 frame TDAT should be written in format DDMM, not MMDD. (#2770)
   * Don't display an error on Ogg and FLAC files with no tags.
   * Remove video files from the list of supported formats.
   * Always use musicbrainz.org for PUID submissions. (#2764)
   * Files/Pending Files count not reset/recalculated after removing files. (#2541)
   * Removed files still get processed during fingerprinting. (#2738)
   * Read only text values from APEv2 tags. (#2828)

Version 0.9.0alpha8 - 2007-04-15
 * New Features:
   * Notification of changed files in releases. (#2632, #2702)
 * Bux Fixes:
   * Don't open the file for analyzing twice. (#2733, #2734)
   * Save ASIN and release country to ID3 tags. (#2484, #2456)