@@ -1,6 +1,7 @@
 Version 0.9.0beta1 - 2007-05-XX
  * New Features:
    * New TaggerScript function $len(text). (#2843)
+   * Don't compress huge ID3 frames. (#2850)
  * Bug Fixes:
    * F1 for Help instead of CTRL+H on Windows and Linux. (#2485, Nikolai Prokoschenko)
    * Tabbing focus transition from search isn't as expected. (#2546, Nikolai Prokoschenko)
